src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__assigning_literal_with_incompatible_encoding_to_char_is_validated.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: "&diagnostics"
---
error[E037]: Invalid assignment: cannot assign 'WSTRING' to 'CHAR'
  ┌─ <internal>:7:13
  │
7 │             x := "A";
  │             ^^^^^^^^ Invalid assignment: cannot assign 'WSTRING' to 'CHAR'

error[E037]: Invalid assignment: cannot assign 'STRING' to 'WCHAR'
  ┌─ <internal>:8:13
  │
8 │             y := 'B';
  │             ^^^^^^^^ Invalid assignment: cannot assign 'STRING' to 'WCHAR'
